--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,34 @@
 # Core dependencies
-torch==2.1.0
-numpy==1.24.3
+torch>=2.6.0
+numpy>=1.26.4
 
 # Tokenization
-tiktoken==0.5.1
-transformers==4.34.0
+tiktoken>=0.8.0
+transformers>=4.46.0
 
 # Data processing
-pandas==2.0.3
-scikit-learn==1.3.0
+pandas>=2.2.0
+scikit-learn>=1.6.0
 
 # Evaluation
-rouge-score==0.1.2
-bert-score==0.3.13
+rouge-score>=0.1.2
+bert-score>=0.3.13
 
 # Logging & monitoring
-tensorboard==2.14.0
-wandb==0.15.10
+tensorboard>=2.16.0
+wandb>=0.16.3
 
 # Development
-pytest==7.4.0
-pytest-cov==4.1.0
-black==23.9.1
-flake8==6.0.0
-mypy==1.5.1
+pytest>=8.0.0
+pytest-cov>=4.1.0
+black>=24.1.1
+flake8>=7.0.0
+mypy>=1.8.0
 
 # API
-openai==0.28.0
-python-dotenv==1.0.0
+openai>=1.12.0
+python-dotenv>=1.0.0
 
 # Jupyter
-jupyter==1.0.0
-ipykernel==6.25.0
+jupyter>=1.0.0
+ipykernel>=6.29.0
